--- a/open_issues/libpthread_dlopen.mdwn
+++ b/open_issues/libpthread_dlopen.mdwn
@@ -15,6 +15,15 @@ License|/fdl]]."]]"""]]
 
 # [[FAQ entry|faq/libpthread_dlopen]]
 
+Some applications don't themselves link against libpthread, but then load
+plugins which do link against libpthread.  This means internally switching from
+single-threading to multi-threading, which is only supported since libc0.3
+2.19-16~2. Previously, it would result in errors such as:
+
+    ./pthread/../sysdeps/generic/pt-mutex-timedlock.c:70: __pthread_mutex_timedlock_internal: Assertion `__pthread_threads' failed.
+
+*This is now fixed as of libc0.3 2.19-16~2.*
+
 # IRC, freenode, #hurd, 2010-01-24
 
     <pinotree> youpi: hm, thought about the pthread/stubs issue w/ dlopen'ed
