Document a bit about hurd/mach/mig so people have an idea where to look at

--- a/documentation.mdwn
+++ b/documentation.mdwn
@@ -59,7 +59,14 @@ text="*[[shapiro\_capintro\_1999|capability]]*:
 
 # Specific Components
 
-Documentation for...
+The GNU/Hurd system is composed of the Hurd servers running on top of the
+GNU Mach microkernel. Mach only handles scheduling tasks and threads, memory
+management, and message passing. Mig is used to abstract RPCs on top of Mach's
+message passing. Eventually, the Hurd servers and Unix processes discuss with
+each other using these RPCs.
+
+Depending on your background, you may want to start reading the documentation
+from userlandish interfaces (Hurd) or from the micro kernel itself (Mach).
 
   * [[GNU_Hurd|hurd/documentation]]
 
