Add quick overview for first-comers

--- a/documentation.mdwn
+++ b/documentation.mdwn
@@ -1,4 +1,4 @@
-[[!meta copyright="Copyright © 2008, 2010, 2011 Free Software Foundation,
+[[!meta copyright="Copyright © 2008, 2010, 2011, 2015 Free Software Foundation,
 Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
@@ -51,6 +51,11 @@ text="*[[shapiro\_capintro\_1999|capability]]*:
     does a good job at describing general principles of a [[capability]]-based
     system architecture.
 
+
+# Quick overview
+
+You may want to start reading a quick [[overview]] of how the GNU/Hurd system
+starts, and thus how it is structured.
 
 # FAQ
 
