update hardware support

--- a/faq/drivers.mdwn
+++ b/faq/drivers.mdwn
@@ -10,18 +10,18 @@ License|/fdl]]."]]"""]]
 
 [[!tag faq/support faq/_important]]
 
-[[!meta title="What drivers does GNU/Hurd have?"]]
+[[!meta title="what hardware is supported? What drivers does GNU/Hurd have?"]]
 
-Currently, for disks Mach integrates drivers from Linux 2.0 through some
-[[community/gsoc/project_ideas/driver_glue_code]].  As it's very old, that
-limits hardware support a lot, of course.  For network boards, we use the
-[[DDE]] toolkit to run linux 2.6.32 drivers in userland processes,
-which provides both long-term support for new hardware and safety against driver
-bugs.  Firmware loading is however not implemented yet.
+Currently, for disks Mach integrates old drivers from Linux through some
+[[community/gsoc/project_ideas/driver_glue_code]], which provide
+IDE disk support, and we have an AHCI driver which provides [[SATA
+support|faq/sata_disk_drives]]. For network boards, we use the [[DDE]] toolkit
+to run linux 2.6.32 drivers in userland processes, which provides both long-term
+support for new hardware and safety against driver bugs.  Note however that we
+have of course not tested all drivers, we obviously don't even have all kinds of
+hardware.  So we can not promise that they will all work. What probably
+works for sure is what we usually use: the rtl8139 and e1000 drivers for
+instance. Firmware loading is not implemented yet.
+
 [[microkernel/mach/gnumach/ports/Xen]] is also supported, both blkfront and
 netfront.
-
-Note however that we have of course not tested all drivers, we obviously don't
-even have all kinds of hardware. So we can not promise that they will all
-work. What probably works for sure is what we usually use: the rtl8139 or e1000
-drivers for instance.
