Add the symlink translator issue to the small hacks list.

--- a/contributing.mdwn
+++ b/contributing.mdwn
@@ -107,6 +107,7 @@ lookups|hurd/interface/dir_lookup]] work.
 * Add a tool to trace system calls, by using gnumach's Syscall-Emulation, see <http://www.gnu.org/software/hurd/gnumach-doc/Syscall-Emulation.html>
 * Improve our [[FUSE library|hurd/libfuse]].
 * Add a relatime or lazytime option to ext2fs.
+* Fix our [[open_issues/symlink_translator]].
 
 <a name="porting"></a>
 ## Porting Packages
