Add a lot of links

--- a/documentation.mdwn
+++ b/documentation.mdwn
@@ -54,7 +54,7 @@ text="*[[shapiro\_capintro\_1999|capability]]*:
 
 # Quick overview
 
-You may want to start reading a quick [[overview]] of how the GNU/Hurd system
+You may want to start reading a [[quick overview|overview]] of how the GNU/Hurd system
 starts, and thus how it is structured.
 
 # FAQ
