--- a/hurd/documentation.mdwn
+++ b/hurd/documentation.mdwn
@@ -20,9 +20,24 @@ is included in the section entitled
   * [[*The_Hurd_and_Linux*|/hurd-and-linux]], a comment by Richard Stallman.
 
   * [[*Towards_a_New_Strategy_of_OS_Design*|/hurd-paper]], an architectural
-    overview by Thomas Bushnell, BSG.
+    overview by Thomas Bushnell, BSG, notably:
 
-  * [[*The_Hurd*|/hurd-talk]], a presentation by Marcus Brinkmann.
+    * [[The design|/hurd-paper#design]]
+    * [[Translators|/hurd-paper#translator]]
+    * [[The auth translator|/hurd-paper#auth]]
+    * [[The proc translator|/hurd-paper#proc]]
+    * [[The exec translator|/hurd-paper#exec]]
+    * [[The ftpfs translator|/hurd-paper#ftpfs]]
+
+  * [[*The_Hurd*|/hurd-talk]], a presentation by Marcus Brinkmann, notably:
+
+    * [[How to get a port?|/hurd-talk#how]]
+    * [[Pathname resolution example|/hurd-talk#pat]]
+    * [[Mapping the POSIX Interface|/hurd-talk#map]]
+    * [[Active vs Passive|/hurd-talk#act]]
+    * [[Authentication|/hurd-talk#aut]]
+    * [[Password Server|/hurd-talk#pas]]
+    * [[Process Server|/hurd-talk#pro]]
 
   * The *[[translator_primer]]*.
 
