--- a/community/gsoc/project_ideas/physical_memory_management.mdwn
+++ b/community/gsoc/project_ideas/physical_memory_management.mdwn
@@ -13,7 +13,7 @@ is included in the section entitled
 GNU Mach is currently suffering from severe limitations caused by the way
 it manages physical memory. For example, since it requires pages to be mapped
 in kernel space in order to be used, the maximum amount of usable physical
-memory is currently around 800MB (or 1.8GB is a 2/2 split is set). And
+memory is currently around 800MB (or 1.8GB if a 2/2 split is set). And
 because the page allocator is unable to easily return blocks of contiguous
 pages, the kernel has to use virtual memory to provide contiguity.
 But the kernel virtual space is separate from the direct mapping of
