open_issues/kill_setuid: File this as open_issue_hurd.

--- a/open_issues/kill_setuid.mdwn
+++ b/open_issues/kill_setuid.mdwn
@@ -9,7 +9,7 @@ Sections, no Front-Cover Texts, and no Back-Cover Texts.  A copy of the license
 is included in the section entitled [[GNU Free Documentation
 License|/fdl]]."]]"""]]
 
-[[!tag open_issue_xorg]]
+[[!tag open_issue_hurd]]
 
 http://bugs.debian.org/413326
 
