--- a/community/gsoc.mdwn
+++ b/community/gsoc.mdwn
@@ -1,4 +1,4 @@
-[[!meta copyright="Copyright © 2008, 2009, 2010, 2011, 2012, 2013, 2014 Free
+[[!meta copyright="Copyright © 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015 Free
 Software Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
@@ -11,21 +11,20 @@ License|/fdl]]."]]"""]]
 
 [[!meta title="Google Summer of Code"]]
 
+<!--
 The Google Summer of Code 2014 is over.  Chances are that we will again be
 participating in 2015, stay tuned.
+-->
 
-<!--
 We're in!  The GNU Hurd project is again participating in the [Google Summer of
 Code](http://www.google-melange.com/) under the [GNU
 umbrella](http://www.gnu.org/software/soc-projects/).
 
-Per the [Google Summer of Code 2014 Program
-Timeline](http://www.google-melange.com/gsoc/events/google/gsoc2014), on
-Monday, from 2014-03-10 to 2014-03-21, it's the *student application period*,
-which
+Per the [Google Summer of Code 2015 Program
+Timeline](http://www.google-melange.com/gsoc/events/google/gsoc2015),
+from 2015-03-16 to 2015-03-27, it's the *student application period*, which
 is plenty of time for preparing and discussing your applications -- but please
 don't wait to the last minute!
--->
 
 <!--
 This year's *student application period* is over.  Thanks for sending in your
