community/gsoc: GSoC 2015 student application period is over.

--- a/community/gsoc.mdwn
+++ b/community/gsoc.mdwn
@@ -20,17 +20,20 @@ We're in!  The GNU Hurd project is again participating in the [Google Summer of
 Code](http://www.google-melange.com/) under the [GNU
 umbrella](http://www.gnu.org/software/soc-projects/).
 
-Per the [Google Summer of Code 2015 Program
-Timeline](http://www.google-melange.com/gsoc/events/google/gsoc2015),
-from 2015-03-16 to 2015-03-27, it's the *student application period*, which
-is plenty of time for preparing and discussing your applications -- but please
-don't wait to the last minute!
-
-<!--
 This year's *student application period* is over.  Thanks for sending in your
 applications!  We're now reviewing and discussing these, so please pay
 attention to any questions posted on your proposal's page.  The Google site's
 notification system should be sending out emails, too.
+
+Per the [Google Summer of Code 2015 Program
+Timeline](http://www.google-melange.com/gsoc/events/google/gsoc2015),
+we're now waiting for Google to announce the number of slots that the whole GNU
+project gets, and we'll be discussing with our GNU peers about how to split
+these up among all the GNU subprojects.
+<!--
+from 2015-03-16 to 2015-03-27, it's the *student application period*, which
+is plenty of time for preparing and discussing your applications -- but please
+don't wait to the last minute!
 -->
 
 As we only have finite resources (meaning that we won't be able to accept all
@@ -62,16 +65,6 @@ openly post messages to [[mailing_lists/bug-hurd]] saying: *Hey, I don't know
 how to do `X`, can someone please help me?*  And, as we're not working next to
 each other in a conventional office or university setup, we'll need to
 establish and get used to different communication channels.
-
-<!--
-[Timeline](http://www.google-melange.com/gsoc/events/google/gsoc2013).
-
-As
-boring as it is, but the next step is waiting: we will have to wait for Google
-to announce the number of slots that the whole GNU project gets, and we'll be
-discussing with our GNU peers about how to split these up among all the GNU
-subprojects.
--->
 
 
 # Possible projects
