how to install ikiwiki on wheezy

--- a/contributing/web_pages.mdwn
+++ b/contributing/web_pages.mdwn
@@ -173,7 +173,7 @@ You can also locally get the whole set of pages rendered to HTML:
     [...]
     scanning contributing/web_pages.mdwn
     rendering contributing/web_pages.mdwn
-    
+
     Now open `hurd-web.rendered/index.html' to browse the pages.
 
 ### ikiwiki's `w3mmode`
@@ -194,7 +194,7 @@ Render the pages:
     [...]
     scanning contributing/web_pages.mdwn
     rendering contributing/web_pages.mdwn
-    
+
     Now open `hurd-web.rendered.w3m/index.html' to browse the pages.
 
 Invoke `w3m`:
@@ -241,6 +241,9 @@ If you don't have an MTA running, you'll have to find another way: either post
 the `*.patch` files to <web-hurd@gnu.org> or upload them somewhere for us to
 download them from.
 
+## Ikiwiki wheezy installation and dependencies
+
+    $ apt-get install ikiwiki libyaml-syck-perl markdown libsearch-xapian-perl texinfo
 
 # New Year Procedure
 
