add ada4hurd basic documentation

--- a/hurd/documentation.mdwn
+++ b/hurd/documentation.mdwn
@@ -88,3 +88,5 @@ is included in the section entitled
     investigates the mobility aspect of stores
     and how it can be generalized and used for other applications.
     The background chapter may be of interest to new developers.
+
+  * [[Ada4Hurd]]: some tools to write translators with Ada
