[ada4hurd] add cd node results

--- a/hurd/documentation/netfs_ada_results.mdwn
+++ b/hurd/documentation/netfs_ada_results.mdwn
@@ -67,7 +67,7 @@ is included in the section entitled
 
   * Returns an error :
     * ls: reading directory node: Operation not supported
-  * call sequence :
+  * Call sequence :
     * validate\_state
     * check\_open\_permissions
     * validate\_state
@@ -75,3 +75,14 @@ is included in the section entitled
     * check\_open\_permissions
     * validate\_state
     * get\_dirents line 90 of netfs\_implementation package
+
+### cd node
+
+  * Hangs
+  * Call sequence :
+    * Validate\_Stat
+    * Check\_Open\_Permissions
+    * Validate\_Stat
+    * Validate\_Stat
+    * Check\_Open\_Permissions
+    * netfs\_implementation.adb:57 Netfs\_Implementation.Attempt\_Lookup
