Link to recent discussion.

--- a/open_issues/_san.mdwn
+++ b/open_issues/_san.mdwn
@@ -1,4 +1,5 @@
-[[!meta copyright="Copyright © 2012, 2013 Free Software Foundation, Inc."]]
+[[!meta copyright="Copyright © 2012, 2013, 2015 Free Software Foundation,
+Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -10,7 +11,7 @@ License|/fdl]]."]]"""]]
 
 [[!meta title="Port the GCC and LLVM/clang Sanitizers (*san) to the Hurd"]]
 
-[[!tag open_issue_gcc]]
+[[!tag open_issue_gcc open_issue_llvm]]
 
 GCC and LLVM/clang provide several *sanitizers*,
 <http://clang.llvm.org/docs/UsersManual.html#controlling-code-generation>, such
@@ -62,3 +63,8 @@ first look they reimplement a lot of [[/glibc]] by directly using
     <jakub> richi: that said, I don't want to spend as much time as I've done
       so far on it, and in the time I'll allocate for it optimizing the code it
       generates is higher on the todo list than ports to other targets
+
+
+# 2015-04-14
+
+[[!message-id "20150414130851.GA6154@type.bordeaux.inria.fr"]].
