advise to make sure to use the unstable version of crosshurd

--- a/hurd/running/debian/CrossInstall.mdwn
+++ b/hurd/running/debian/CrossInstall.mdwn
@@ -17,7 +17,7 @@ Next we create a useful mountpoint and mount the partition.
 
 ### <a name="Retrieving_CrossHurd"> Retrieving CrossHurd </a>
 
-Unless you don't run Debian GNU/Linux download it from <http://packages.debian.org/crosshurd>, or simply apt-get the package from Testing or Unstable.
+Unless you don't run Debian GNU/Linux download it from <http://packages.debian.org/crosshurd>, or simply apt-get the package from Testing or Unstable. Avoid using the version from Stable since it probably is outdated. In case of problems, make sure to try the Unstable version before reporting the issue.
 
     # apt-get install crosshurd
 
