--- a/contributing/web_pages.mdwn
+++ b/contributing/web_pages.mdwn
@@ -1,5 +1,5 @@
-[[!meta copyright="Copyright © 2007, 2008, 2009, 2010, 2011, 2013, 2014 Free
-Software Foundation, Inc."]]
+[[!meta copyright="Copyright © 2007, 2008, 2009, 2010, 2011, 2013, 2014, 2015
+Free Software Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -94,6 +94,15 @@ editing endeavours you're going to undertake.  Doing so should help to (a) avoid
 double work and (b) avoid merge conflicts if you install your changes into the
 main repository.
 
+## Ikiwiki Installation
+
+You'll want to install [[ikiwiki]] in order to locally render the pages you're
+editing.
+
+### Debian Wheezy
+
+    $ apt-get install ikiwiki libyaml-syck-perl markdown libsearch-xapian-perl texinfo
+
 ## Identifying Yourself
 
 First, let's make sure that you're properly identifying yourself towards Git.
@@ -173,7 +182,7 @@ You can also locally get the whole set of pages rendered to HTML:
     [...]
     scanning contributing/web_pages.mdwn
     rendering contributing/web_pages.mdwn
-
+    
     Now open `hurd-web.rendered/index.html' to browse the pages.
 
 ### ikiwiki's `w3mmode`
@@ -194,7 +203,7 @@ Render the pages:
     [...]
     scanning contributing/web_pages.mdwn
     rendering contributing/web_pages.mdwn
-
+    
     Now open `hurd-web.rendered.w3m/index.html' to browse the pages.
 
 Invoke `w3m`:
@@ -241,9 +250,6 @@ If you don't have an MTA running, you'll have to find another way: either post
 the `*.patch` files to <web-hurd@gnu.org> or upload them somewhere for us to
 download them from.
 
-## Ikiwiki wheezy installation and dependencies
-
-    $ apt-get install ikiwiki libyaml-syck-perl markdown libsearch-xapian-perl texinfo
 
 # New Year Procedure
 
