news/2015-04-10-releases: New page.

--- a/faq/release.mdwn
+++ b/faq/release.mdwn
@@ -1,4 +1,5 @@
-[[!meta copyright="Copyright © 2008, 2013 Free Software Foundation, Inc."]]
+[[!meta copyright="Copyright © 2008, 2013, 2015 Free Software Foundation,
+Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -12,12 +13,13 @@ License|/fdl]]."]]"""]]
 
 [[!meta title="When will the Hurd be released?"]]
 
-0.5 has been [[released on 2013-09-27|news/2013-09-27]].  Read about the
-[[Hurd's status|hurd/status]].
+GNU Hurd 0.6 has been [[released on 2015-04-10|news/2015-04-10-releases]],
+along with GNU Mach 1.5 and GNU MIG 1.5.  Read about the [[Hurd's
+status|hurd/status]].
 
 > OK, but when will it be finished?
 
-Well, is the Linux kernel considered to be really "finished"?  Hurd 0.5 does
+Well, is the Linux kernel considered to be really "finished"?  Hurd 0.6 does
 work, but of course it can still become better -- beginning to
 [[contribute|contributing]] and [[joining us|how_many_developers]] is the best
 way for you to help achieve that.  :-)
