--- a/history.mdwn
+++ b/history.mdwn
@@ -1,5 +1,5 @@
 [[!meta copyright="Copyright © 1998, 1999, 2001, 2002, 2007, 2008, 2009, 2011,
-2013 Free Software Foundation, Inc."]]
+2013, 2015 Free Software Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -112,6 +112,8 @@ mailing lists.
     "20020830194413.GA6819@outpost.dnsalias.org"]] (2002-08-30)
   * [[GNU Hurd 0.5, GNU Mach 1.4, GNU MIG 1.4 released|news/2013-09-27]]
     (2013-09-27)
+  * [[GNU Hurd 0.6, GNU Mach 1.5, GNU MIG 1.5
+    released|news/2015-04-10-releases]] (2015-04-10)
 
 
 # An Incomplete GNU Hurd Timeline
@@ -165,3 +167,6 @@ mailing lists.
     Hackers Meeting in Paris|community/meetings/ghm2013]], *Happy 30th
     birthday, GNU*: [[GNU Hurd 0.5, GNU Mach 1.4, GNU MIG 1.4
     released|news/2013-09-27]].
+  * [...]
+  * 2015: [...], [[GNU Hurd 0.6, GNU Mach 1.5, GNU MIG 1.5
+    released|news/2015-04-10-releases]].
