--- a/hurd.mdwn
+++ b/hurd.mdwn
@@ -1,5 +1,5 @@
 [[!meta copyright="Copyright © 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008,
-2009, 2010, 2011, 2013 Free Software Foundation, Inc."]]
+2009, 2010, 2011, 2013, 2015 Free Software Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -12,7 +12,7 @@ License|/fdl]]."]]"""]]
 The GNU Hurd is under active development.  Because of that, there is no
 *stable* version.  We mainly distribute the Hurd sources through
 [[Git|source_repositories]].  The latest release is [[GNU Hurd
-0.5|news/2013-09-27]].
+0.6|news/2015-04-10-releases]].
 
 Although it is possible to bootstrap the GNU/Hurd system from the sources by
 cross-compiling and installing the system software and the basic applications,
