--- a/index.mdwn
+++ b/index.mdwn
@@ -1,5 +1,5 @@
 [[!meta copyright="Copyright © 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008,
-2009, 2010, 2011, 2013 Free Software Foundation, Inc."]]
+2009, 2010, 2011, 2013, 2015 Free Software Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -98,7 +98,8 @@ are rendered on a [[Debian_GNU/Hurd|hurd/running/debian]] system.
 
 # Current Status
 
-The last release is [[GNU Hurd 0.5|news/2013-09-27]], 2013-09-27.  The Hurd is
+The latest releases are [[GNU Hurd 0.6, GNU Mach 1.5, GNU MIG
+1.5|news/2015-04-10-releases]], 2015-04-10.  The Hurd is
 developed by [[a few volunteers in their spare time|faq/how_many_developers]].
 The project welcomes any assistance [[you can provide|contributing]].
 Porting and development expertise is still badly needed in many key areas.
