open_issues/binutils: binutils-gdb: 110f91128cf3e047eb1e04d346c27d71cc33fb9c (2015-04-19)

--- a/open_issues/binutils.mdwn
+++ b/open_issues/binutils.mdwn
@@ -47,7 +47,7 @@ git diff --patience --stat=$COLUMNS,$COLUMNS --patch --src-prefix=./ --dst-prefi
 
 -->
 
-Last reviewed up to Git commit d3e9b40afb8e7bd09522044951cdce4710676c3e
+Last reviewed up to Git commit 110f91128cf3e047eb1e04d346c27d71cc33fb9c
 (2015-04-19).
 
   * Globally
@@ -415,8 +415,8 @@ the `tee` process does not terminate if there are still stray leftover
 processes that [have their stdout/stderr
 open](http://sourceware.org/ml/gdb-patches/2012-10/msg00489.html).  `kill`ing
 these (`SIGKILL` may be needed), makes the `tee` process terminate, too.  On
-GNU/Hurd, these generally are `gdb.base/sigaltstack`, `gdb.base/siginfo`,
-several `gdb.base/sigstep` ones, and `gdb.threads/watchthreads`.
+GNU/Hurd, these generally are `gdb.base/sigaltstack`, `gdb.base/siginfo`, and
+`gdb.threads/watchthreads`.
 
 On laplace.SCHWINGE, running with
 `LD_PRELOAD=$HOME/fopen,unlink-NULL-wrapper.so` to get past [[!message-id
