[Ada4Hurd] Netfs exploration : after attempt_lookup implementation

--- a/hurd/documentation/netfs_ada_results.mdwn
+++ b/hurd/documentation/netfs_ada_results.mdwn
@@ -86,3 +86,62 @@ is included in the section entitled
     * Validate\_Stat
     * Check\_Open\_Permissions
     * netfs\_implementation.adb:57 Netfs\_Implementation.Attempt\_Lookup
+
+## Rev 68f905dc9b7c
+
+  * Attemp\_Lookup implemented
+
+### ls -la .
+  * No more error : node is displayed as a directory
+  * Sequence call : validate\_state / check\_open\_permissions / validate\_state
+
+### ls -la node
+
+  * Returns an error :
+    * ls: reading directory node: Operation not supported
+    * get\_dirents still not implemented
+  * Call sequence :
+    * validate\_state
+    * check\_open\_permissions
+    * validate\_state
+    * validate\_state
+    * check\_open\_permissions
+    * validate\_state
+    * get\_dirents line 90 of netfs\_implementation package
+
+### cd node
+
+  * No more hang
+  * Call sequence :
+    * Validate\_Stat
+    * check\_open\_permissions
+    * Validate\_Stat
+    * Validate\_Stat
+    * check\_open\_permissions
+    * attemp\_lookup
+    * Validate\_Stat
+    * check\_open\_permissions
+    * attemp\_lookup
+    * Validate\_Stat
+    * Validate\_Stat
+    * check\_open\_permissions
+    * Validate\_Stat
+    * Not Implemented Netfs\_Implementation.Get\_Dirents
+    * attemp\_lookup
+    * Validate\_Stat
+    * Validate\_Stat
+    * check\_open\_permissions
+    * Validate\_Stat
+    * Not Implemented Netfs\_Implementation.Get\_Dirents
+    * attemp\_lookup
+    * Validate\_Stat
+    * Validate\_Stat
+    * check\_open\_permissions
+    * Validate\_Stat
+    * Not Implemented Netfs\_Implementation.Get\_Dirents
+    * attemp\_lookup
+    * Validate\_Stat
+    * Validate\_Stat
+    * check\_open\_permissions
+    * Validate\_Stat
+    * Not Implemented Netfs\_Implementation.Get\_Dirents
